fixed letter spacing on kitchen cards to match figma (as per PP)

--- a/src/sass/pages/restaurant/_about-kitchen.scss
+++ b/src/sass/pages/restaurant/_about-kitchen.scss
@@ -111,7 +111,7 @@
 }
 
 .kitchen-card__description {
-  @include font(600, 12, 1.25, 0.02);
+  @include font(600, 12, 1.25, null);
   @include tablet {
     font-size: 16px;
     line-height: 20px;
